test keys added to project